arregl dv_conts, bt cerr en dv_dict

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -132,17 +132,17 @@ BesTalk - The best of language exchange.
  autocapitalize="off" novalidate>
 
 <input type="email" name="email" 
- class="tex_cen bor_non bor_bot2p_bla marg_5050 bac_no"
+ class="tex_cen bor_bot2p_bla marg_5050p bac_non"
  ng-model="user.email"
  placeholder="Email" required><br>
 
 <input type="password" name="password" 
- class="tex_cen bor_non bor_bot2p_bla marg_5050 bac_no"
+ class="tex_cen bor_bot2p_bla marg_5050p bac_non"
  ng-model="user.password"
  placeholder="Password" required><br>
 
 <button type="submit" id="bt_login"
- class="w70 bor_non bor_rad10p fon_bol cur_poi bac_col_green col_whi"
+ class="w70 bor_rad10p bor_non fon_bol cur_poi bac_col_green col_whi"
  ng-click="entrar_login()">Login</button><br>
 
 <p>Don't have a BesTalk account yet? <span 
@@ -166,28 +166,28 @@ BesTalk - The best of language exchange.
 <form name="fm_sign_up" onsubmit="return validar_password()">
 
 <input type="text" name="firstname" 
- class="tex_cen bor_non bor_bot2p_bla marg_5050 bac_no"
+ class="tex_cen bor_bot2p_bla marg_5050p bac_non"
  ng-model="user.firstname"
  placeholder="First Name" required>
 
 <input type="text" name="lastname" 
- class="tex_cen bor_non bor_bot2p_bla marg_5050 bac_no"
+ class="tex_cen bor_bot2p_bla marg_5050p bac_non"
  ng-model="user.lastname"
  placeholder="Last Name"><br>
 
 <input type="email" name="email" 
- class="tex_cen bor_non bor_bot2p_bla marg_5050 bac_no"
+ class="tex_cen bor_bot2p_bla marg_5050p bac_non"
  ng-model="user.email"
  placeholder="Email"><br>
 
 <input type="password" id="in_pw" 
- class="tex_cen bor_non bor_bot2p_bla marg_5050 bac_no"
+ class="tex_cen bor_bot2p_bla marg_5050p bac_non"
  ng-model="user.password"
  placeholder="Password"><br>
 
 <input type="password" id="in_cpw"
  name="password" 
- class="tex_cen bor_non bor_bot2p_bla marg_5050 bac_no"
+ class="tex_cen bor_bot2p_bla marg_5050p bac_non"
  placeholder="Repeat password"><br>
 
 <button type="submit" id="bt_sign_up" 
