--- a/client/index.html
+++ b/client/index.html
@@ -157,7 +157,7 @@ background-color:white;}
 .bor_1p_grey {border: 1px solid grey} .bor_1p_bla {border:1px solid black}  
   
 .bor_bot_bla {border-bottom: 1px solid black}
-.bor_bot2p_bla {border-bottom: 2px solid black}
+.bor_bot2p_bla {border-left: none; border-top: none; border-right: none; border-bottom: 2px solid black}
 .bor_rad5p {border-radius: 5px}
 .bor_rad10p {border-radius: 10px}
 .bor_rad20 {border-radius: 20%}
@@ -196,7 +196,7 @@ background-color:white;}
 .bac_col_emerg_profile {background-color: #ccc}
 .bac_col_tbl_u {background-color:#34495e}
 .bac_col_tbl_u_desv {background: rgba(52,73,94,0.3)}
-.bac_col_cuadr_logsig {color: #f5f5f5}
+.bac_col_cuadr_logsig {background-color: #f5f5f5}
 .bac_non {background: none}
   
 .bac_97d,.bac_col_bstlk {background-color: #9370db} .bac_bfd,.bac_col_con_chat_g {background-color: #ffdab9}
